<resources>
    <string name="app_name">Agro Mall Application</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to">Welcome to</string>
    <string name="companyName">AgroMall</string>
    <string name="email">Email</string>
    <string name="wrong_email_address">Wrong email address</string>
    <string name="password">Password</string>
    <string name="wrong_password">Wrong password</string>
    <string name="login">Login</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="register_now">REGISTER NOW</string>


    <string name="no_location_detected">
        No location detected. Make sure location is enabled on the device.
    </string>

    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="success">Success</string>
    <string name="err_email">Wrong Email</string>
    <string name="err_name">Error</string>
    <string name="err_phone">Wrong Phone must be 11 digits and Start with 0</string>
    <string name="err_empty">Empty Field</string>
</resources>
